replaced method for java 17